--- a/index.html
+++ b/index.html
@@ -9264,7 +9264,7 @@
 
               <div class="bolad">Ukraine War, 23 October 2022</div>
 
-              <div class="cardDate">
+              <div>
                 <div>Oct 23</div>
                 <div>.</div>
                 <div>5 min read</div>
@@ -9282,7 +9282,7 @@
 
               <div class="bolad">Comeback</div>
 
-              <div class="cardDate">
+              <div>
                 <div>Oct 26</div>
                 <div>.</div>
                 <div>24 min read</div>
@@ -9303,7 +9303,7 @@
                 For Voldemort
               </div>
 
-              <div class="cardDate">
+              <div>
                 <div>Oct 26</div>
                 <div>.</div>
                 <div>2 min read</div>
@@ -9323,7 +9323,7 @@
                 The Night Paul McCartney Donned a Disguise at Fillmore East
               </div>
 
-              <div class="cardDate">
+              <div>
                 <div>Oct 22</div>
                 <div>.</div>
                 <div>3 min read</div>
@@ -9345,7 +9345,7 @@
                 Advanced
               </div>
 
-              <div class="cardDate">
+              <div>
                 <div>Oct 13</div>
                 <div>.</div>
                 <div>6 min read</div>
@@ -9366,7 +9366,7 @@
                 How To Make Visual Studio Code Look Amazing
               </div>
 
-              <div class="cardDate">
+              <div>
                 <div>Oct 27</div>
                 <div>.</div>
                 <div>7 min read</div>
@@ -9375,6 +9375,252 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section id="footerSection" class="marginLeft marginRight">
+        <div id="articlesSection">
+          <div class="articleItem">
+            <div class="articleData">
+              <div class="articleAutor">
+                <img src="./assets/imgs/image07.jpeg" alt="img" />
+                <div>Robert Roy Britt</div>
+              </div>
+
+              <div class="articleTitle bolad">How Old is Old?</div>
+
+              <div>
+                What we consider "old" changes dranatically with age, and our
+                perspectives can be predictive of how well we age
+              </div>
+
+              <div class="articleFooter">
+                <div>
+                  <div>Oct 27</div>
+                  <div>.</div>
+                  <div>5 min read</div>
+                  <div>.</div>
+                  <button>Aging</button>
+                  <img src="./assets/imgs/svg/star.svg" alt="star" />
+                </div>
+
+                <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+              </div>
+            </div>
+
+            <img
+              class="imgArticle"
+              src="./assets/imgs/image08.jpeg"
+              alt="img"
+            />
+          </div>
+
+          <div class="articleItem">
+            <div class="articleData">
+              <div class="articleAutor">
+                <img src="./assets/imgs/image09.jpeg" alt="img" />
+                <div>Taru Anniina Liikanen</div>
+              </div>
+
+              <div class="articleTitle bolad">
+                Is Taylor Swift Allowed to Speak About Fat?
+              </div>
+
+              <div>
+                Can you speak about your trauma if you don't look traumatized?
+              </div>
+
+              <div class="articleFooter">
+                <div>
+                  <div>Oct 24</div>
+                  <div>.</div>
+                  <div>6 min read</div>
+                  <div>.</div>
+                  <button>Health</button>
+                  <img src="./assets/imgs/svg/star.svg" alt="star" />
+                </div>
+
+                <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+              </div>
+            </div>
+
+            <img
+              class="imgArticle"
+              src="./assets/imgs/image10.jpeg"
+              alt="img"
+            />
+          </div>
+
+          <div class="articleItem">
+            <div class="articleData">
+              <div class="articleAutor">
+                <img src="./assets/imgs/image11.jpeg" alt="img" />
+                <div>David Rodenas, Ph. D.</div>
+              </div>
+
+              <div class="articleTitle bolad">
+                Don’t Screw Up, You Will Be Found Guilty
+              </div>
+
+              <div>
+                Software Engineer, yours is the right to produce high-quality
+                work at all times, also the liability.
+              </div>
+
+              <div class="articleFooter">
+                <div>
+                  <div>Oct 15</div>
+                  <div>.</div>
+                  <div>5 min read</div>
+                  <div>.</div>
+                  <button>Software Engineering</button>
+                  <img src="./assets/imgs/svg/star.svg" alt="star" />
+                </div>
+
+                <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+              </div>
+            </div>
+
+            <img class="imgArticle" src="./assets/imgs/image12.png" alt="img" />
+          </div>
+
+          <div class="articleItem">
+            <div class="articleData">
+              <div class="articleAutor">
+                <img src="./assets/imgs/image13.png" alt="img" />
+                <div>Microsoft Design</div>
+              </div>
+
+              <div class="articleTitle bolad">Leave No Trace</div>
+
+              <div>
+                How product designers can break from the status quo and help our
+                planet
+              </div>
+
+              <div class="articleFooter">
+                <div>
+                  <div>Oct 25</div>
+                  <div>.</div>
+                  <div>11 min read</div>
+                  <div>.</div>
+                  <button>Sustainability</button>
+                  <img src="./assets/imgs/svg/star.svg" alt="star" />
+                </div>
+
+                <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+              </div>
+            </div>
+
+            <img class="imgArticle" src="./assets/imgs/image14.png" alt="img" />
+          </div>
+
+          <div class="articleItem">
+            <div class="articleData">
+              <div class="articleAutor">
+                <img src="./assets/imgs/image15.jpeg" alt="img" />
+                <div>Scott H. Young</div>
+              </div>
+
+              <div class="articleTitle bolad">
+                Variability, Not Repetition, is the Key to Mastery
+              </div>
+
+              <div>
+                Bruce Lee is reported to have said, “I fear not the man who has
+                practiced 10,000 kicks once, but the man who has practiced one
+                kick 10,000...
+              </div>
+
+              <div class="articleFooter">
+                <div>
+                  <div>Oct 26</div>
+                  <div>.</div>
+                  <div>7 min read</div>
+                  <div>.</div>
+                  <button>Health</button>
+                  <img src="./assets/imgs/svg/star.svg" alt="star" />
+                </div>
+
+                <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+              </div>
+            </div>
+
+            <img class="imgArticle" src="./assets/imgs/image16.jpg" alt="img" />
+          </div>
+
+          <div class="articleItem">
+            <div class="articleData">
+              <div class="articleAutor">
+                <img src="./assets/imgs/image17.png" alt="img" />
+                <div>Paul A. DeStefanoin Human Parts</div>
+              </div>
+
+              <div class="articleTitle bolad">
+                What I Overheard as an Escape Room Actor
+              </div>
+
+              <div>
+                Lock a group of people in a room and you’ll witness some
+                surprising confessions
+              </div>
+
+              <div class="articleFooter">
+                <div>
+                  <div>Jan 18, 2020</div>
+                  <div>.</div>
+                  <div>6 min read</div>
+                  <div>.</div>
+                  <button>Experiences</button>
+                  <img src="./assets/imgs/svg/star.svg" alt="star" />
+                </div>
+
+                <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+              </div>
+            </div>
+
+            <img
+              class="imgArticle"
+              src="./assets/imgs/image18.jpeg"
+              alt="img"
+            />
+          </div>
+
+          <div class="articleItem">
+            <div class="articleData">
+              <div class="articleAutor">
+                <img src="./assets/imgs/image19.jpeg" alt="img" />
+                <div>Kim Scott</div>
+              </div>
+
+              <div class="articleTitle bolad">
+                6 Steps for Setting Measurable Goals to Avoid “Productivity
+                Paranoia”
+              </div>
+
+              <div>
+                With more people working in remote and hybrid environments than
+                ever before, company, team and individual goals must be explicit
+                and…
+              </div>
+
+              <div class="articleFooter">
+                <div>
+                  <div>Oct 24</div>
+                  <div>.</div>
+                  <div>6 min read</div>
+                  <div>.</div>
+                  <button>Health</button>
+                  <img src="./assets/imgs/svg/star.svg" alt="star" />
+                </div>
+
+                <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+              </div>
+            </div>
+
+            <img class="imgArticle" src="./assets/imgs/image20.jpg" alt="img" />
+          </div>
+        </div>
+        <div id="asideSection"></div>
       </section>
     </main>
   </body>
