fix media screen

--- a/index.html
+++ b/index.html
@@ -9620,7 +9620,35 @@
             <img class="imgArticle" src="./assets/imgs/image20.jpg" alt="img" />
           </div>
         </div>
-        <div id="asideSection"></div>
+        <div id="asideSection">
+          <div class="discoverMore">
+            <div class="discoverTitle bold">
+              DISCOVER MORE OF WHAT MATTERS TO YOU
+            </div>
+            <div>
+              <button>Programming</button>
+              <button>Data Science</button>
+              <button>Tecnology</button>
+              <button>Self Improvement</button>
+              <button>Writing</button>
+              <button>Relationships</button>
+              <button>Machine Learning</button>
+              <button>Productivity</button>
+              <button>Politics</button>
+            </div>
+          </div>
+          <div class="helper">
+            <button>Help</button>
+            <button>Status</button>
+            <button>Writers</button>
+            <button>Blog</button>
+            <button>Careers</button>
+            <button>Privacy</button>
+            <button>Terms</button>
+            <button>About</button>
+            <button>Knowable</button>
+          </div>
+        </div>
       </section>
     </main>
   </body>
