--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <header>
+    <header id="topBar">
       <nav class="marginLeft marginRight">
         <img src="./assets/imgs/svg/logo.svg" alt="logo medium" />
         <div>
@@ -26,7 +26,7 @@
           <button class="shadowbutton">Membership</button>
           <button class="shadowbutton">Write</button>
           <button>Sign in</button>
-          <button class="getstarted">Get started</button>
+          <button id="topButton" class="getstarted">Get started</button>
         </div>
       </nav>
     </header>
@@ -62,6 +62,7 @@
           </defs>
           <g clip-path="url(#__lottie_element_3372)">
             <g
+              id="fatherG"
               fill="rgb(0,0,0)"
               font-size="22"
               font-family="Shne"
@@ -9652,4 +9653,5 @@
       </section>
     </main>
   </body>
+  <script src="./assets/js/index.js"></script>
 </html>
